source/css/_cover.sass
.cover
  +align-items(center)
  background: $color-cover
  min-height: 100vh

  h1
    border-bottom: 0
    font-size: 4em
    line-height: 1.5
    margin: 0
    padding: 0

  h2
    margin: 0
    padding: 0

  +screen-tall
    position: fixed
    top: $nav-height
    z-index: 10

    + .panel
      border-top: solid 1px $color-border
      margin-top: 100vh

.cover-logo
  display: block
  height: auto
  margin: 0 auto
  max-width: 10rem
  width: 100%

